--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ img
   .top-list ul 
   {
     font-size: 1.5rem;
-    margin:1rem;
+    margin:0;
   }
 
 
@@ -136,14 +136,14 @@ img
   #maindoc #javascript-basics h1, h2, h3, h4
   {
      font-size: 2rem;
-     margin:1rem;
+     margin:0;
      
   }
 
   #maindoc p, code
   {
     font-size: 2em;
-    margin:1rem;
+    margin:0;
     
   }
 }
