--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ header
   width: 100%;
   height: 100px;
   padding: 2rem;
-  text-decoration:underline;
+  background-color: #0a0a23;
+  
 }
 
 header h1
@@ -22,6 +23,7 @@ header h1
   font-family: 'Roboto', sans-serif;
   letter-spacing: 1.4px;
   text-align: center;
+  color:#fff;
   
 }
 
@@ -69,7 +71,6 @@ header h1
 {
   
   padding: 1rem;
-  text-decoration: underline;
   font-family: 'Roboto', sans-serif;
   letter-spacing: 1.5px;
   margin-left: 3.5rem;
@@ -84,13 +85,14 @@ header h1
   text-align: center;
   margin:0;
   padding: 1.2rem;
-  text-decoration: underline;
+ 
   font-family: Lato, sans-serif;
   letter-spacing: 1.5px;
 }
 #maindoc h3
 {
   font-size: 1.7rem;
+  text-decoration: underline;
 }
 
 #maindoc h4
@@ -189,11 +191,20 @@ footer p, a
 
 @media screen and (max-width : 600px)
 {
+ header
+ {
+  background-color: #0a0a23;
+ }
+ 
+ 
   header h1
   {
     font-size: 1.8rem;
     text-align: center;
     width: 100%;
+    color:#fff;
+   
+    
   }
   #maindoc
   {
@@ -203,7 +214,6 @@ footer p, a
   .topic-list
   {
     width: 100%;
-    background: pink;
   }
   .topic-list ul a li
   { 
@@ -221,7 +231,7 @@ footer p, a
   #maindoc h1, h2, h3, h4
   {
     padding: 1rem;
-    text-decoration: underline;
+    
     font-family: 'Roboto', sans-serif;
     letter-spacing: 1.5px;
     margin:0;
@@ -231,23 +241,22 @@ footer p, a
 
   #maindoc h1
   {
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     background-color: #d0d0d5;
-    border: 1px solid#111;
+    border: 1px solid #0a0a23;
+  
   }
 
   #maindoc h2
   {
-  font-size: 1.4rem;
-  text-decoration: none;
-  
-  
+  font-size: 1.8rem;
   
   }
 
   #maindoc h3
   {
     font-size: 1.2rem;
+    text-decoration: underline;
   }
 
   #maindoc h4
@@ -257,7 +266,7 @@ footer p, a
 
   #maindoc p
   {
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.4;
   font-family: Lato,sans-serif;
   text-align: justify;
