--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ header h1
   font-size: 2.1rem;
   background-color: #d0d0d5;
   border: 1px solid #0a0a23;
+  width:90%;
+  margin: auto;
 }
 
 #maindoc h2
@@ -200,7 +202,29 @@ footer p, a
   color:#d0d0d5;
   margin-left: 1rem;
 }
+#loader
+{
+  border:16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width:120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
 
+}
+@keyframes spin {
+  0%
+  {
+    transform:rotate(0deg);
+  
+  }
+  100%
+  {
+    transform: rotate(360deg);
+    
+  }
+  
+}
 
 
 @media screen and (max-width : 600px)
