--- a/style.css
+++ b/style.css
@@ -1,77 +1,54 @@
-
-
-  *
-{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 
-header
-{
-  
+header {
   width: 100%;
   height: 100px;
   padding: 2rem;
   background-color: #0a0a23;
-  
 }
 
-header h1
-{
-  font-family: 'Roboto', sans-serif;
+header h1 {
+  font-family: "Roboto", sans-serif;
   letter-spacing: 1.4px;
   text-align: center;
-  color:#fff;
-  
+  color: #fff;
 }
 
-.topic-list
-{
+.topic-list {
   width: 100%;
   height: auto;
-  
-  
-  
 }
 
-.topic-list ul a 
-{
-  
+.topic-list ul a {
   list-style: none;
   text-decoration: none;
   padding: 1rem;
-  color:#333;
+  color: #333;
   text-decoration: underline;
-  font-family: 'Roboto', sans-serif;
-  
+  font-family: "Roboto", sans-serif;
 }
 
-
-.topic-list ul 
-{ 
-  
+.topic-list ul {
   width: 100%;
   font-size: 1.2rem;
   text-align: center;
 }
 
-
-
-#maindoc
-{
+#maindoc {
   width: 100%;
   height: 100%;
   margin: auto;
-  
-  
 }
-#maindoc h1, h2, h3, h4
-{
-  
+#maindoc h1,
+h2,
+h3,
+h4 {
   padding: 1rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   letter-spacing: 1.5px;
   margin-left: 3.5rem;
   margin-right: 1rem;
@@ -79,41 +56,33 @@ header h1
   color: #323a45;
 }
 
-#maindoc h1
-{
+#maindoc h1 {
   font-size: 2.1rem;
   background-color: #d0d0d5;
   border: 1px solid #0a0a23;
-  width:90%;
+  width: 90%;
   margin: auto;
 }
 
-#maindoc h2
-{
+#maindoc h2 {
   font-size: 1.9rem;
   text-align: center;
-  margin:0;
+  margin: 0;
   padding: 1.2rem;
- 
+
   font-family: Lato, sans-serif;
   letter-spacing: 1.5px;
 }
-#maindoc h3
-{
+#maindoc h3 {
   font-size: 1.1rem;
   text-decoration: underline;
 }
 
-#maindoc h4
-{
+#maindoc h4 {
   font-size: 1.3rem;
 }
 
-
-
-#maindoc p
-{
-  
+#maindoc p {
   font-size: 1.1rem;
   line-height: 1.6;
   font-weight: 400;
@@ -121,13 +90,10 @@ header h1
   margin-left: 5rem;
   margin-right: 5rem;
   letter-spacing: 1px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #112e51;
-  
-  
 }
-code
-{
+code {
   display: block;
   white-space: pre;
   position: relative;
@@ -135,233 +101,197 @@ code
   word-wrap: normal;
   line-height: 2;
   padding: 1rem;
-  margin-left:5rem;
+  margin-left: 5rem;
   margin-top: 1rem;
   background-color: #111;
-  text-align:left;
-  font-size: 1.30rem;
+  text-align: left;
+  font-size: 1.3rem;
   width: 80%;
   font-family: monospace;
   color: #fff;
 }
-#maindoc #javascript-basics ul
-{
+#maindoc #javascript-basics ul {
   margin-left: 6em;
   line-height: 2em;
-  font-size: 1.30rem;
-
+  font-size: 1.3rem;
 }
-span
-{
+span {
   background: #d0d0d5;
 }
- figure
- {
-   
-   border: 2px solid #0a0a23;
-   margin:1rem;
-  }
-
-
-img
-{
-  margin-left: 4rem;
-  padding: 1rem;
-  width:500px;
-  height:auto;
+figure {
+  border: 2px solid #0a0a23;
+  margin: 1rem;
 }
 
-figcaption p
-{
-  position:relative;
-  bottom:1rem;
+img {
+  margin-left: 4rem;
+  padding: 1rem;
+  width: 500px;
+  height: auto;
+}
+
+figcaption p {
+  position: relative;
+  bottom: 1rem;
   margin: auto;
 }
 
-footer
-{
+footer {
   width: 100%;
   height: 100px;
-  background-color: blueviolet;
+
   position: relative;
-  bottom:0;
+  bottom: 0;
   top: 10px;
   background-color: #0a0a23;
 }
 
-#ecmascriptsix
-{
+#ecmascriptsix {
   padding-top: 2rem;
 }
 
-footer p, a
-{
+footer p,
+a {
   font-size: 1.1rem;
   line-height: 1;
   padding-top: 1rem;
-  color:#d0d0d5;
+  color: #d0d0d5;
   margin-left: 1rem;
 }
-#loader
-{
-  border:16px solid #f3f3f3;
+#loader {
+  border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
-  width:120px;
+  width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
-
 }
 @keyframes spin {
-  0%
-  {
-    transform:rotate(0deg);
-  
+  0% {
+    transform: rotate(0deg);
   }
-  100%
-  {
+  100% {
     transform: rotate(360deg);
-    
   }
-  
 }
 
+.challengelinks {
+  color: #112e51;
+  padding-top: 10px;
+  border: 1px solid #black;
+}
 
-@media screen and (max-width : 600px)
-{
- header
- {
-  background-color: #0a0a23;
- }
- 
- 
-  header h1
-  {
+@media screen and (max-width: 600px) {
+  header {
+    background-color: #0a0a23;
+  }
+
+  header h1 {
     font-size: 1.8rem;
     text-align: center;
     width: 100%;
-    color:#fff;
-   
-    
+    color: #fff;
   }
-  #maindoc
-  {
+  #maindoc {
     width: 100%;
   }
 
-  .topic-list
-  {
+  .topic-list {
     width: 100%;
   }
-  .topic-list ul a li
-  { 
-  font-size: 1.1rem;
-  text-align: center;
+  .topic-list ul a li {
+    font-size: 1.1rem;
+    text-align: center;
   }
 
-  #javascript-basics
-  {
-    
+  #javascript-basics {
     width: 98%;
     margin: auto;
   }
-
-  #maindoc h1, h2, h3, h4
-  {
-    padding: 1rem;
-    
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 1.5px;
-    margin:0;
-    text-align: center;
-    color:#112e51;
+  #javascript-basics h1,
+  #ecmascriptsix h1 {
+    width: 100%;
   }
 
-  #maindoc h1
-  {
+  #maindoc h1,
+  h2,
+  h3,
+  h4 {
+    padding: 1rem;
+
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 1.5px;
+    margin: 0;
+    text-align: center;
+    color: #112e51;
+  }
+
+  #maindoc h1 {
     font-size: 1.9rem;
     background-color: #d0d0d5;
     border: 1px solid #0a0a23;
-  
   }
 
-  #maindoc h2
-  {
-  font-size: 1.8rem;
-  
+  #maindoc h2 {
+    font-size: 1.8rem;
   }
 
-  #maindoc h3
-  {
+  #maindoc h3 {
     font-size: 1.2rem;
     text-decoration: underline;
   }
 
-  #maindoc h4
-  {
-  font-size: 1rem;
+  #maindoc h4 {
+    font-size: 1rem;
   }
 
-  #maindoc p
-  {
-  font-size: 1.1rem;
-  line-height: 1.4;
-  font-family: Lato,sans-serif;
-  text-align: justify;
-  margin: 1rem;
-  letter-spacing: 1px;
-  text-align: left;
+  #maindoc p {
+    font-size: 1.1rem;
+    line-height: 1.4;
+    font-family: Lato, sans-serif;
+    text-align: justify;
+    margin: 1rem;
+    letter-spacing: 1px;
+    text-align: left;
+  }
 
- }
+  #maindoc #javascript-basics ul {
+    margin-left: 2em;
+    line-height: 2em;
+    font-size: 1.3rem;
+    font-family: Lato, sans-serif;
+    color: #112e51;
+  }
 
- #maindoc #javascript-basics ul
-{
-  margin-left: 2em;
-  line-height: 2em;
-  font-size: 1.30rem;
-  font-family: Lato,sans-serif;
-  color:#112e51;
+  code {
+    width: 98%;
+    line-height: 2;
+    padding: 1rem;
+    margin-top: 10px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: scroll;
+    font-size: 1.2rem;
+    text-align: left;
+  }
 
+  img {
+    width: 100%;
+    height: auto;
+    margin: auto;
+  }
+
+  #maindoc #javascript-basics ul li {
+    margin-left: 2em;
+    line-height: 2em;
+    font-size: 0.7rem;
+    font-family: Georgia, "Times New Roman", Times, serif;
+  }
+
+  footer {
+    position: relative;
+    bottom: 0;
+    top: 20px;
+  }
 }
-
-code 
-{
-  width: 98%;
-  line-height: 2;
-  padding: 1rem;
-  margin-top:10px;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-x: scroll;
-  font-size: 1.2rem;
-  text-align: left;
-}
-
-img 
-{
-  width: 100%;
-  height: auto;
-  margin: auto;
-}
-
-#maindoc #javascript-basics ul li
-{
-  margin-left: 2em;
-  line-height: 2em;
-  font-size: .7rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-
-}
-
-footer 
-{
-  position: relative;
-  bottom:0;
-  top: 20px;
-}
-
-
-}
-
-
